[package]
name = "maple-rs"
version = "0.1.1"
edition = "2024"
authors = ["K4HVH"]
description = "A Rust library for loading Windows PE executables and DLLs directly from memory without writing to disk"
license = "GPL-3.0"
repository = "https://github.com/K4HVH/maple-rs"
homepage = "https://github.com/K4HVH/maple-rs"
documentation = "https://docs.rs/maple-rs"
readme = "README.md"
keywords = ["pe", "memory", "executable", "dll", "windows"]
categories = ["os::windows-apis", "memory-management", "development-tools"]
rust-version = "1.85"

[dependencies]
thiserror = "2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "minwindef",
    "memoryapi",
    "libloaderapi",
    "errhandlingapi"
] }


[lib]
name = "maple_rs"
crate-type = ["lib"]

[[example]]
name = "load_demo"
path = "examples/load_demo.rs"

[[example]]
name = "load_focus"
path = "examples/load_focus.rs"